docs/cobblemon-tags/1.7.0/BiomeTags.md
# Biome Tags

This file contains tags related to different biomes in cobblemon, as well as some worldgen and special evolution tags.

## Tags:

<details>
<summary><b>Tag:</b> #cobblemon:is_arid</summary>

- #cobblemon:is_badlands
- #cobblemon:is_desert
- #cobblemon:is_savanna

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_badlands</summary>

- #c:is_badlands
- #clifftree:dry_badlands
- #minecraft:is_badlands
- terralith:ashen_savanna
- terralith:red_oasis
- terralith:warped_mesa
- terralith:white_mesa
- wythers:danakil_desert

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_bamboo</summary>

- byg:bamboo_forest
- minecraft:bamboo_jungle
- wythers:bamboo_jungle_canyon
- wythers:bamboo_jungle_highlands
- wythers:bamboo_jungle_swamp
- wythers:bamboo_swamp
- wythers:jade_highlands
- wythers:maple_mountains
- wythers:mushroom_island
- wythers:sakura_forest
- wythers:sandy_jungle
- wythers:sparse_bamboo_jungle
- wythers:waterlily_swamp

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_beach</summary>

- #minecraft:is_beach
- biomesoplenty:dune_beach
- wythers:guelta
- wythers:sand_dunes

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_cave</summary>

- #c:is_cave
- #c:is_underground
- #clifftree:all_caves
- biomesoplenty:glowing_grotto
- biomesoplenty:spider_nest
- minecraft:dripstone_caves
- minecraft:lush_caves
- terralith:cave/andesite_caves
- terralith:cave/desert_caves
- terralith:cave/diorite_caves
- terralith:cave/fungal_caves
- terralith:cave/granite_caves
- terralith:cave/infested_caves
- terralith:cave/thermal_caves
- terralith:cave/underground_jungle
- wythers:calcite_caverns
- wythers:deep_dark_incursion
- wythers:deep_underground
- wythers:fungous_dripstone_caves
- wythers:lichenous_caves
- wythers:lichenous_dripstone_caves
- wythers:lush_dripstone_caves
- wythers:lush_fungous_dripstone_caves
- wythers:lush_shroom_caves
- wythers:mossy_caves
- wythers:mossy_dripstone_caves
- wythers:mushroom_caves
- wythers:underground
- wythers:volcanic_chamber

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_cherry_blossom</summary>

- blooming_biosphere:snowy_cherry_grove
- byg:bamboo_forest
- byg:cherry_blossom_forest
- minecraft:cherry_grove
- terralith:sakura_grove
- terralith:sakura_valley
- wythers:sakura_forest

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_coast</summary>

- #c:is_beach
- #c:is_stony_shores
- #clifftree:is_cliff
- #cobblemon:is_beach
- blooming_biosphere:tidepools
- minecraft:stony_shore
- terralith:basalt_cliffs
- terralith:granite_cliffs
- terralith:white_cliffs
- wythers:calcite_coast
- wythers:coastal_mangroves
- wythers:cold_island
- wythers:cold_stony_shore
- wythers:deepslate_shore
- wythers:frigid_island
- wythers:frozen_island
- wythers:gravelly_beach
- wythers:icy_shore
- wythers:mediterranean_island
- wythers:temperate_island
- wythers:tropical_island
- wythers:warm_stony_shore

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_cold</summary>

- #byg:is_cold
- #c:is_cold
- #c:is_cold/overworld
- #cobblemon:is_cold_ocean
- #cobblemon:is_freezing
- #cobblemon:is_peak
- #cobblemon:is_taiga
- #cobblemon:is_tundra
- biomesoplenty:aspen_forest
- biomesoplenty:bog
- biomesoplenty:cold_desert
- biomesoplenty:dead_forest
- biomesoplenty:hot_springs
- biomesoplenty:maple_woods
- biomesoplenty:old_growth_dead_forest
- biomesoplenty:pumpkin_patch
- biomesoplenty:seasonal_forest
- biomesoplenty:seasonal_orchard
- clifftree:cold_caves
- clifftree:cold_river
- wythers:berry_bog

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_cold_ocean</summary>

- minecraft:cold_ocean
- minecraft:deep_cold_ocean

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_deep_dark</summary>

- minecraft:deep_dark
- terralith:cave/crystal_caves
- terralith:cave/deep_caves
- terralith:cave/frostfire_caves
- terralith:cave/mantle_caves
- terralith:cave/tuff_caves
- wythers:deep_dark_forest
- wythers:deep_dark_incursion

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_deep_ocean</summary>

- #c:is_deep_ocean
- #minecraft:is_deep_ocean
- wythers:deep_icy_ocean

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_desert</summary>

- #byg:is_desert
- #c:is_desert
- #clifftree:is_desert
- #wythers:is_desert
- biomesoplenty:lush_desert
- clifftree:desert_cliff
- darkerdepths:sandy_catacombs
- minecraft:desert
- terralith:ancient_sands
- terralith:cave/desert_caves
- terralith:desert_canyon
- terralith:desert_oasis
- terralith:desert_spires
- terralith:lush_desert
- terralith:red_oasis
- terralith:sandstone_valley
- wythers:badlands_desert
- wythers:desert_island
- wythers:kwongan_heath
- wythers:outback_desert
- wythers:red_desert
- wythers:sandy_jungle

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_dripstone</summary>

- biomesoplenty:fungal_jungle
- byg:dead_sea
- minecraft:dripstone_caves
- terralith:fractured_savanna
- terralith:stony_spires
- wythers:fungous_dripstone_caves
- wythers:lichenous_dripstone_caves
- wythers:lush_dripstone_caves
- wythers:lush_fungous_dripstone_caves
- wythers:mossy_dripstone_caves

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_end</summary>

- #c:is_end
- #minecraft:is_end
- endercon:end_border
- endercon:end_hallows

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_floral</summary>

- #byg:is_floral
- #c:flower_forest
- #c:is_floral
- #cobblemon:is_cherry_blossom
- biomesoplenty:field
- biomesoplenty:highland_moor
- biomesoplenty:lavender_field
- biomesoplenty:lavender_forest
- biomesoplenty:lush_savanna
- biomesoplenty:mystic_grove
- biomesoplenty:orchard
- byg:allium_fields
- byg:amaranth_fields
- byg:orchard
- byg:rose_fields
- byg:skyris_vale
- minecraft:cherry_grove
- minecraft:flower_forest
- minecraft:meadow
- minecraft:sunflower_plains
- terralith:blooming_plateau
- terralith:blooming_valley
- terralith:cloud_forest
- terralith:lavender_forest
- terralith:lavender_valley
- wythers:autumnal_flower_forest
- wythers:flowering_pantanal
- wythers:jacaranda_savanna
- wythers:lapacho_plains
- wythers:spring_flower_fields
- wythers:spring_flower_forest

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_forest</summary>

- #c:is_flower_forest
- #c:is_forest
- #c:tree/deciduous
- #minecraft:is_forest
- biomesoplenty:lavender_forest
- biomesoplenty:maple_woods
- biomesoplenty:mediterranean_forest
- biomesoplenty:mystic_grove
- biomesoplenty:old_growth_woodland
- biomesoplenty:ominous_woods
- biomesoplenty:orchard
- biomesoplenty:origin_valley
- biomesoplenty:prairie
- biomesoplenty:seasonal_forest
- biomesoplenty:seasonal_orchard
- biomesoplenty:woodland
- blooming_biosphere:autumnal_forest
- blooming_biosphere:oak_woodland
- minecraft:cherry_grove
- terralith:alpha_islands
- terralith:alpha_islands_winter
- terralith:blooming_valley
- terralith:forested_highlands
- terralith:lavender_forest
- terralith:lavender_valley
- terralith:mirage_isles
- terralith:sakura_grove
- terralith:sakura_valley
- terralith:temperate_highlands
- wythers:birch_taiga
- wythers:boreal_forest_red
- wythers:boreal_forest_yellow
- wythers:dry_tropical_forest
- wythers:tangled_forest
- wythers:tropical_forest

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_freezing</summary>

- #byg:is_snowy
- #c:snowy
- #cobblemon:is_frozen_ocean
- #cobblemon:is_glacial
- #cobblemon:is_snowy
- byg:cardinal_tundra
- clifftree:frozen_caves
- minecraft:frozen_river
- minecraft:jagged_peaks
- minecraft:snowy_beach
- minecraft:snowy_plains
- minecraft:snowy_slopes
- terralith:emerald_peaks
- terralith:scarlet_mountains
- terralith:skylands_winter
- terralith:snowy_badlands
- wythers:crimson_tundra
- wythers:frozen_island
- wythers:snowy_bog
- wythers:snowy_canyon
- wythers:snowy_peaks
- wythers:snowy_tundra

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_freshwater</summary>

- #cobblemon:is_river
- #cobblemon:is_swamp
- wythers:desert_lakes
- wythers:guelta
- wythers:tropical_forest_river

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_frozen_ocean</summary>

- minecraft:deep_frozen_ocean
- minecraft:frozen_ocean
- terralith:frozen_cliffs
- wythers:deep_icy_ocean
- wythers:icy_ocean

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_glacial</summary>

- #byg:is_icy
- #c:is_icy
- clifftree:glacier_cliff
- clifftree:glacier_valley
- minecraft:frozen_peaks
- minecraft:ice_spikes
- terralith:cave/frostfire_caves
- terralith:frozen_cliffs
- terralith:glacial_chasm
- wythers:frozen_island
- wythers:glacial_cliffs
- wythers:ice_cap
- wythers:icy_crags

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_grassland</summary>

- #cobblemon:is_plains
- #cobblemon:is_savanna

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_highlands</summary>

- biomesoplenty:highland
- biomesoplenty:highland_moor
- minecraft:meadow
- terralith:alpine_highlands
- terralith:arid_highlands
- terralith:blooming_plateau
- terralith:highlands
- wythers:bamboo_jungle_highlands
- wythers:eucalyptus_deanei_forest
- wythers:forested_highlands
- wythers:highland_tropical_rainforest
- wythers:highlands
- wythers:huangshan_highlands
- wythers:jade_highlands
- wythers:wistman_woods

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_hills</summary>

- #c:is_hill
- #c:is_mountain/slope
- #c:is_windswept
- #cobblemon:is_highlands
- #minecraft:is_hill
- biomesoplenty:jade_cliffs
- biomesoplenty:mediterranean_forest
- terralith:blooming_valley
- terralith:forested_highlands
- terralith:lavender_valley
- terralith:lush_valley
- terralith:moonlight_valley
- terralith:sakura_valley
- terralith:savanna_slopes
- terralith:temperate_highlands
- terralith:yosemite_lowlands
- wythers:autumnal_crags
- wythers:ayers_rock
- wythers:icy_crags
- wythers:old_growth_taiga_crags
- wythers:taiga_crags
- wythers:temperate_rainforest_crags
- wythers:thermal_taiga_crags
- wythers:windswept_jungle

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_island</summary>

- #cobblemon:is_tropical_island
- byg:lush_stacks
- minecraft:mushroom_fields
- terralith:alpha_islands
- terralith:alpha_islands_winter
- terralith:mirage_isles
- terralith:warped_mesa
- wythers:cold_island
- wythers:desert_island
- wythers:frigid_island
- wythers:frozen_island
- wythers:jungle_island
- wythers:mediterranean_island
- wythers:mediterranean_island_thermal_springs
- wythers:mushroom_island
- wythers:temperate_island
- wythers:tropical_island

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_jungle</summary>

- #c:is_jungle
- #minecraft:is_jungle
- biomesoplenty:floodplain
- biomesoplenty:rainforest
- blooming_biosphere:rainforest
- clifftree:tropical_river
- terralith:cave/underground_jungle
- wythers:dripleaf_swamp
- wythers:eucalyptus_deanei_forest
- wythers:highland_tropical_rainforest
- wythers:humid_tropical_grassland
- wythers:jungle_canyon
- wythers:subtropical_forest
- wythers:subtropical_forest_edge
- wythers:subtropical_grassland
- wythers:tropical_forest
- wythers:tropical_forest_canyon
- wythers:tropical_grassland
- wythers:tropical_island
- wythers:tropical_rainforest

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_lukewarm_ocean</summary>

- minecraft:deep_lukewarm_ocean
- minecraft:lukewarm_ocean
- wythers:tropical_beach
- wythers:tropical_island
- wythers:warm_stony_shore

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_lush</summary>

- #c:is_lush
- byg:lush_stacks
- minecraft:lush_caves
- terralith:cave/fungal_caves
- terralith:cave/underground_jungle
- wythers:dripleaf_swamp
- wythers:lichenous_caves
- wythers:lichenous_dripstone_caves
- wythers:lush_dripstone_caves
- wythers:lush_fungous_dripstone_caves
- wythers:lush_shroom_caves

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_magical</summary>

- #byg:is_magical
- #c:is_magical
- #wythers:is_dark_forest
- biomesoplenty:aspen_forest
- biomesoplenty:mystic_grove
- byg:skyris_vale
- minecraft:dark_forest
- terralith:amethyst_canyon
- terralith:amethyst_rainforest
- terralith:mirage_isles
- terralith:moonlight_grove
- terralith:moonlight_valley
- wythers:lantern_river
- wythers:mushroom_island
- wythers:snowy_thermal_taiga

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_mirage_island</summary>

- terralith:mirage_isles

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_mountain</summary>

- #c:is_mountain
- #cobblemon:is_hills
- #minecraft:is_mountain
- biomesoplenty:crag
- blooming_biosphere:snowy_cherry_grove
- terralith:stony_spires
- terralith:volcanic_peaks
- terralith:windswept_spires
- terralith:yosemite_cliffs
- wythers:tibesti_mountains
- wythers:tropical_volcano
- wythers:tsingy_forest
- wythers:volcano

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_mushroom</summary>

- #c:is_mushroom
- #c:is_mushroom_island
- biomesoplenty:fungal_jungle
- biomesoplenty:glowing_grotto
- biomesoplenty:mystic_grove
- blooming_biosphere:rainforest
- byg:temperate_rainforest
- byg:tropical_rainforest
- byg:weeping_witch_forest
- darkerdepths:glowshroom_forest
- minecraft:dark_forest
- minecraft:mushroom_fields
- terralith:cave/fungal_caves
- terralith:mirage_isles
- wythers:ancient_taiga
- wythers:deep_dark_incursion
- wythers:forbidden_forest
- wythers:mushroom_island
- wythers:phantasmal_forest
- wythers:phantasmal_forest

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_ocean</summary>

- #c:is_ocean
- #cobblemon:is_cold_ocean
- #cobblemon:is_deep_ocean
- #cobblemon:is_frozen_ocean
- #cobblemon:is_lukewarm_ocean
- #cobblemon:is_temperate_ocean
- #cobblemon:is_warm_ocean
- #minecraft:is_ocean
- clifftree:stone_ocean

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_overworld</summary>

- #c:is_overworld
- #minecraft:is_overworld

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_peak</summary>

- #c:is_mountain/peak
- minecraft:frozen_peaks
- minecraft:jagged_peaks
- minecraft:snowy_slopes
- minecraft:stony_peaks
- terralith:emerald_peaks
- terralith:rocky_mountains
- terralith:scarlet_mountains
- terralith:windswept_spires
- wythers:andesite_crags
- wythers:aspen_crags

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_plains</summary>

- #byg:is_plains
- #c:is_plains
- #cobblemon:is_highlands
- biomesoplenty:clover_patch
- biomesoplenty:field
- biomesoplenty:fir_clearing
- biomesoplenty:grassland
- biomesoplenty:lavender_field
- biomesoplenty:marsh
- biomesoplenty:orchard
- biomesoplenty:pasture
- biomesoplenty:prairie
- biomesoplenty:seasonal_orchard
- blooming_biosphere:chaparral
- clifftree:sparse_forest
- minecraft:plains
- minecraft:sunflower_plains
- terralith:brushland
- terralith:shrubland
- terralith:steppe
- terralith:valley_clearing
- wythers:berry_bog
- wythers:cool_forest_edge
- wythers:dry_tropical_grassland
- wythers:forest_edge
- wythers:spring_flower_fields
- wythers:subtropical_forest_edge
- wythers:tropical_grassland

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_plateau</summary>

- #byg:is_plateau
- #c:is_plateau
- minecraft:savanna_plateau
- wythers:ayers_rock

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_river</summary>

- #c:is_river
- #minecraft:is_river
- terralith:warm_river
- wythers:guelta
- wythers:tropical_forest_river

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_sandy</summary>

- #byg:is_sandy
- #c:is_sandy
- #cobblemon:is_badlands
- #cobblemon:is_desert
- clifftree:warm_river

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_savanna</summary>

- #c:is_savanna
- #minecraft:is_savanna
- biomesoplenty:lush_desert
- biomesoplenty:lush_savanna
- blooming_biosphere:chaparral
- clifftree:oasis
- clifftree:shrubland
- terralith:arid_highlands
- terralith:ashen_savanna
- terralith:brushland
- terralith:desert_oasis
- terralith:fractured_savanna
- terralith:hot_shrubland
- terralith:red_oasis
- terralith:savanna_badlands
- terralith:savanna_slopes
- terralith:shrubland
- wythers:granite_canyon
- wythers:tropical_forest
- wythers:tropical_forest_canyon

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_shrubland</summary>

- biomesoplenty:bog
- biomesoplenty:dryland
- biomesoplenty:field
- biomesoplenty:fungal_jungle
- biomesoplenty:lush_desert
- biomesoplenty:mediterranean_forest
- biomesoplenty:pumpkin_patch
- biomesoplenty:rocky_shrubland
- biomesoplenty:scrubland
- biomesoplenty:shrubland
- blooming_biosphere:chaparral
- clifftree:shrubland
- terralith:alpine_highlands
- terralith:arid_highlands
- terralith:brushland
- terralith:cold_shrubland
- terralith:hot_shrubland
- terralith:rocky_shrubland
- terralith:shrubland
- wythers:berry_bog
- wythers:chaparral
- wythers:crimson_tundra
- wythers:dry_tropical_grassland
- wythers:eucalyptus_salubris_woodland
- wythers:forest_edge
- wythers:kwongan_heath
- wythers:mediterranean_island
- wythers:outback
- wythers:scrub_forest
- wythers:scrubland
- wythers:tropical_grassland
- wythers:tundra

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_sky</summary>

- terralith:skylands_autumn
- terralith:skylands_spring
- terralith:skylands_summer
- terralith:skylands_winter

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_snowy</summary>

- #byg:is_snowy
- #c:is_snowy
- #cobblemon:is_glacial
- #cobblemon:is_snowy_forest
- #cobblemon:is_snowy_taiga
- byg:cardinal_tundra
- clifftree:bog
- clifftree:snowy_diorite_shore
- clifftree:tundra
- minecraft:jagged_peaks
- minecraft:snowy_beach
- minecraft:snowy_plains
- minecraft:snowy_slopes
- terralith:emerald_peaks
- terralith:scarlet_mountains
- terralith:skylands_winter
- terralith:snowy_badlands
- wythers:crimson_tundra
- wythers:frozen_island
- wythers:snowy_bog
- wythers:snowy_canyon
- wythers:snowy_peaks
- wythers:snowy_tundra

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_snowy_forest</summary>

- biomesoplenty:auroral_garden
- biomesoplenty:muskeg
- biomesoplenty:snowy_maple_woods
- blooming_biosphere:snowy_cherry_grove
- terralith:alpha_islands_winter
- terralith:ice_marsh
- terralith:siberian_grove
- terralith:snowy_cherry_grove
- terralith:snowy_maple_forest
- wythers:huangshan_highlands
- wythers:jade_highlands
- wythers:snowy_fen

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_snowy_taiga</summary>

- biomesoplenty:snowy_coniferous_forest
- biomesoplenty:snowy_fir_clearing
- biomesoplenty:snowy_maple_woods
- clifftree:snowy_old_growth_taiga
- minecraft:grove
- minecraft:snowy_taiga
- terralith:alpine_grove
- terralith:cold_shrubland
- terralith:siberian_grove
- terralith:snowy_maple_forest
- terralith:snowy_shield
- terralith:wintry_forest
- terralith:wintry_lowlands
- wythers:cold_island
- wythers:deep_snowy_taiga
- wythers:snowy_thermal_taiga

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_spooky</summary>

- #byg:is_spooky
- #c:is_spooky
- #wythers:is_dark_forest
- biomesoplenty:ominous_woods
- byg:ebony_woods
- minecraft:dark_forest
- wythers:ancient_taiga
- wythers:tangled_forest
- wythers:twilight_meadow

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_swamp</summary>

- #byg:is_swamp
- #c:is_swamp
- #clifftree:is_swamp
- #wythers:is_swamp
- biomesoplenty:bayou
- biomesoplenty:bog
- biomesoplenty:floodplain
- biomesoplenty:marsh
- biomesoplenty:wetland
- blooming_biosphere:marsh
- minecraft:mangrove_swamp
- minecraft:swamp
- terralith:ice_marsh
- terralith:orchid_swamp
- wythers:billabong

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_taiga</summary>

- #c:is_taiga
- #c:tree/coniferous
- #cobblemon:is_snowy_taiga
- #minecraft:is_taiga
- biomesoplenty:coniferous_forest
- biomesoplenty:dead_forest
- biomesoplenty:fir_clearing
- biomesoplenty:forested_field
- biomesoplenty:jade_cliffs
- biomesoplenty:mediterranean_forest
- biomesoplenty:redwood_forest
- biomesoplenty:wetland
- blooming_biosphere:autumnal_forest
- clifftree:cold_river
- terralith:bryce_canyon
- terralith:cloud_forest
- terralith:haze_mountain
- terralith:ice_marsh
- terralith:moonlight_grove
- terralith:moonlight_valley
- terralith:shield
- terralith:siberian_taiga
- terralith:yellowstone
- terralith:yosemite_lowlands
- wythers:ancient_taiga
- wythers:birch_taiga
- wythers:boreal_forest_red
- wythers:boreal_forest_yellow
- wythers:fen
- wythers:flooded_temperate_rainforest
- wythers:forested_highlands
- wythers:huangshan_highlands
- wythers:jade_highlands
- wythers:larch_taiga
- wythers:old_growth_taiga_crags
- wythers:old_growth_taiga_swamp
- wythers:pine_barrens
- wythers:taiga_crags
- wythers:temperate_rainforest
- wythers:temperate_rainforest_crags
- wythers:thermal_taiga
- wythers:thermal_taiga_crags

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_temperate</summary>

- #cobblemon:is_forest
- #cobblemon:is_plains

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_temperate_ocean</summary>

- clifftree:stone_ocean
- minecraft:deep_ocean
- minecraft:ocean

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_thermal</summary>

- biomesoplenty:hot_springs
- clifftree:inferno
- terralith:caldera
- terralith:cave/thermal_caves
- terralith:yellowstone
- wythers:calcite_caverns
- wythers:danakil_desert
- wythers:mediterranean_island_thermal_springs
- wythers:snowy_thermal_taiga
- wythers:thermal_taiga
- wythers:thermal_taiga_crags
- wythers:tibesti_mountains

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_tropical_island</summary>

- biomesoplenty:tropics
- wythers:tropical_beach
- wythers:tropical_island
- wythers:tropical_volcano

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_tundra</summary>

- #c:is_snowy_plains
- biomesoplenty:cold_desert
- biomesoplenty:muskeg
- biomesoplenty:snowy_fir_clearing
- biomesoplenty:tundra
- byg:cardinal_tundra
- clifftree:bog
- clifftree:tundra
- minecraft:ice_spikes
- minecraft:snowy_plains
- terralith:cold_shrubland
- terralith:gravel_desert
- terralith:rocky_shrubland
- terralith:snowy_badlands
- terralith:yellowstone
- wythers:crimson_tundra
- wythers:frigid_island
- wythers:ice_cap
- wythers:icy_crags
- wythers:snowy_tundra
- wythers:tundra

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_volcanic</summary>

- biomesoplenty:volcanic_plains
- biomesoplenty:volcano
- darkerdepths:molten_cavern
- terralith:cave/mantle_caves
- terralith:volcanic_crater
- terralith:volcanic_peaks
- wythers:icy_volcano
- wythers:tropical_volcano
- wythers:volcanic_chamber
- wythers:volcanic_crater
- wythers:volcano

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_warm_ocean</summary>

- blooming_biosphere:tidepools
- byg:lush_stacks
- minecraft:warm_ocean

</details>

<details>
<summary><b>Tag:</b> #cobblemon:bergmite_hisuibiome</summary>

- #cobblemon:is_hills

</details>

<details>
<summary><b>Tag:</b> #cobblemon:bergmite_kalosbiome</summary>

- #cobblemon:is_frozen_ocean

</details>

<details>
<summary><b>Tag:</b> #cobblemon:cubone_alolabiome</summary>

- #cobblemon:is_beach
- #cobblemon:is_volcanic

</details>

<details>
<summary><b>Tag:</b> #cobblemon:cubone_kantobiome</summary>

- #cobblemon:is_arid

</details>

<details>
<summary><b>Tag:</b> #cobblemon:dartrix_alolabiome</summary>

- #cobblemon:is_beach
- #cobblemon:is_ocean
- #cobblemon:is_tropical_island

</details>

<details>
<summary><b>Tag:</b> #cobblemon:dartrix_hisuibiome</summary>

- #cobblemon:is_freezing
- #cobblemon:is_hills

</details>

<details>
<summary><b>Tag:</b> #cobblemon:dewott_hisuibiome</summary>

- #cobblemon:is_coast
- #cobblemon:is_cold_ocean
- minecraft:snowy_beach

</details>

<details>
<summary><b>Tag:</b> #cobblemon:dewott_unovabiome</summary>

- #cobblemon:is_beach
- #cobblemon:is_ocean
- #cobblemon:is_tropical_island

</details>

<details>
<summary><b>Tag:</b> #cobblemon:exeggcute_alolabiome</summary>

- #cobblemon:is_beach
- #cobblemon:is_tropical_island

</details>

<details>
<summary><b>Tag:</b> #cobblemon:exeggcute_kantobiome</summary>

- #cobblemon:is_jungle
- #cobblemon:is_savanna

</details>

<details>
<summary><b>Tag:</b> #cobblemon:goomy_hisuibiome</summary>

- #cobblemon:is_dripstone
- #cobblemon:is_lush

</details>

<details>
<summary><b>Tag:</b> #cobblemon:goomy_kalosbiome</summary>

- #cobblemon:is_swamp

</details>

<details>
<summary><b>Tag:</b> #cobblemon:koffing_galarbiome</summary>

- #cobblemon:is_mushroom

</details>

<details>
<summary><b>Tag:</b> #cobblemon:koffing_kantobiome</summary>

- #cobblemon:nether/is_toxic

</details>

<details>
<summary><b>Tag:</b> #cobblemon:mimejr_galarbiome</summary>

- #cobblemon:is_freezing

</details>

<details>
<summary><b>Tag:</b> #cobblemon:mimejr_sinnohbiome</summary>

- #cobblemon:is_temperate

</details>

<details>
<summary><b>Tag:</b> #cobblemon:petilil_hisuibiome</summary>

- #cobblemon:is_freezing
- #cobblemon:is_hills

</details>

<details>
<summary><b>Tag:</b> #cobblemon:petilil_unovabiome</summary>

- #cobblemon:is_floral
- #cobblemon:is_forest
- #cobblemon:is_tropical_island

</details>

<details>
<summary><b>Tag:</b> #cobblemon:pikachu_alolabiome</summary>

- #cobblemon:is_beach
- #cobblemon:is_tropical_island

</details>

<details>
<summary><b>Tag:</b> #cobblemon:pikachu_kantobiome</summary>

- #cobblemon:is_forest

</details>

<details>
<summary><b>Tag:</b> #cobblemon:quilava_hisuibiome</summary>

- #cobblemon:is_taiga
- #cobblemon:nether/is_crimson
- #cobblemon:nether/is_forest
- #cobblemon:nether/is_overgrowth

</details>

<details>
<summary><b>Tag:</b> #cobblemon:quilava_johtobiome</summary>

- #cobblemon:is_temperate

</details>

<details>
<summary><b>Tag:</b> #cobblemon:rufflet_hisuibiome</summary>

- #cobblemon:is_freezing
- #cobblemon:is_hills

</details>

<details>
<summary><b>Tag:</b> #cobblemon:rufflet_unovabiome</summary>

- #cobblemon:is_temperate

</details>

<details>
<summary><b>Tag:</b> #cobblemon:archipelago</summary>

- #cobblemon:is_mushroom

</details>

<details>
<summary><b>Tag:</b> #cobblemon:archipelago_anti</summary>

- #cobblemon:is_magical
- #cobblemon:is_spooky
- #cobblemon:is_swamp

</details>

<details>
<summary><b>Tag:</b> #cobblemon:continental</summary>

- #cobblemon:is_plains

</details>

<details>
<summary><b>Tag:</b> #cobblemon:continental_anti</summary>

- #cobblemon:is_floral
- #cobblemon:is_mushroom
- #cobblemon:is_savanna
- minecraft:sunflower_plains

</details>

<details>
<summary><b>Tag:</b> #cobblemon:elegant</summary>

- #cobblemon:is_magical
- #cobblemon:is_spooky

</details>

<details>
<summary><b>Tag:</b> #cobblemon:elegant_anti</summary>

- #cobblemon:is_mountain

</details>

<details>
<summary><b>Tag:</b> #cobblemon:fancy</summary>

- #cobblemon:is_cherry_blossom

</details>

<details>
<summary><b>Tag:</b> #cobblemon:forsaken</summary>

- #cobblemon:is_deep_dark

</details>

<details>
<summary><b>Tag:</b> #cobblemon:garden</summary>

- #cobblemon:is_forest

</details>

<details>
<summary><b>Tag:</b> #cobblemon:garden_anti</summary>

- #cobblemon:is_cherry_blossom
- #cobblemon:is_floral
- #cobblemon:is_jungle
- #cobblemon:is_magical
- #cobblemon:is_mountain
- #cobblemon:is_mushroom
- #cobblemon:is_plains
- #cobblemon:is_spooky
- #cobblemon:is_swamp

</details>

<details>
<summary><b>Tag:</b> #cobblemon:high_plains</summary>

- #cobblemon:is_badlands

</details>

<details>
<summary><b>Tag:</b> #cobblemon:icy_snow</summary>

- #cobblemon:is_taiga

</details>

<details>
<summary><b>Tag:</b> #cobblemon:icy_snow_anti</summary>

- #cobblemon:is_mountain

</details>

<details>
<summary><b>Tag:</b> #cobblemon:inferno</summary>

- #minecraft:is_nether

</details>

<details>
<summary><b>Tag:</b> #cobblemon:jungle</summary>

- #cobblemon:is_jungle

</details>

<details>
<summary><b>Tag:</b> #cobblemon:jungle_anti</summary>

- #cobblemon:is_mountain

</details>

<details>
<summary><b>Tag:</b> #cobblemon:marine</summary>

- #cobblemon:is_ocean

</details>

<details>
<summary><b>Tag:</b> #cobblemon:marine_anti</summary>

- #cobblemon:is_frozen_ocean
- #cobblemon:is_warm_ocean

</details>

<details>
<summary><b>Tag:</b> #cobblemon:meadow</summary>

- #cobblemon:is_floral

</details>

<details>
<summary><b>Tag:</b> #cobblemon:meadow_anti</summary>

- #cobblemon:is_cherry_blossom
- #cobblemon:is_magical
- minecraft:sunflower_plains

</details>

<details>
<summary><b>Tag:</b> #cobblemon:monsoon</summary>

- #cobblemon:is_mountain
- #cobblemon:is_peak

</details>

<details>
<summary><b>Tag:</b> #cobblemon:monsoon_anti</summary>

- #cobblemon:is_badlands
- #cobblemon:is_desert
- #cobblemon:is_floral
- #cobblemon:is_mushroom
- #cobblemon:is_tropical_island

</details>

<details>
<summary><b>Tag:</b> #cobblemon:ocean</summary>

- #cobblemon:is_coast
- #cobblemon:is_warm_ocean

</details>

<details>
<summary><b>Tag:</b> #cobblemon:ocean_anti</summary>

- #cobblemon:is_cold_ocean
- #cobblemon:is_frozen_ocean
- #cobblemon:is_lukewarm_ocean
- #cobblemon:is_temperate_ocean

</details>

<details>
<summary><b>Tag:</b> #cobblemon:polar</summary>

- #cobblemon:is_frozen_ocean

</details>

<details>
<summary><b>Tag:</b> #cobblemon:river</summary>

- #cobblemon:is_river
- #cobblemon:is_swamp

</details>

<details>
<summary><b>Tag:</b> #cobblemon:river_anti</summary>

- #cobblemon:is_forest
- #cobblemon:is_jungle
- #cobblemon:is_magical
- #cobblemon:is_spooky

</details>

<details>
<summary><b>Tag:</b> #cobblemon:sandstorm</summary>

- #cobblemon:is_desert

</details>

<details>
<summary><b>Tag:</b> #cobblemon:sandstorm_anti</summary>

- #cobblemon:is_badlands

</details>

<details>
<summary><b>Tag:</b> #cobblemon:savanna</summary>

- #cobblemon:is_savanna

</details>

<details>
<summary><b>Tag:</b> #cobblemon:savanna_anti</summary>

- #cobblemon:is_badlands
- #cobblemon:is_desert
- #cobblemon:is_floral
- #cobblemon:is_mountain

</details>

<details>
<summary><b>Tag:</b> #cobblemon:sun</summary>

- #cobblemon:is_sky
- #cobblemon:is_volcanic
- minecraft:sunflower_plains

</details>

<details>
<summary><b>Tag:</b> #cobblemon:tundra</summary>

- #cobblemon:is_glacial
- #cobblemon:is_snowy_forest
- #cobblemon:is_tundra

</details>

<details>
<summary><b>Tag:</b> #cobblemon:tundra_anti</summary>

- #cobblemon:is_mountain

</details>

<details>
<summary><b>Tag:</b> #cobblemon:void</summary>

- #minecraft:is_end

</details>

<details>
<summary><b>Tag:</b> #cobblemon:dense</summary>

- #c:is_dense_vegetation
- #c:is_dense_vegetation/overworld

</details>

<details>
<summary><b>Tag:</b> #cobblemon:sparse</summary>

- #c:is_sparse_vegetation
- #c:is_sparse_vegetation/overworld
- #cobblemon:is_arid
- #cobblemon:is_grassland
- #cobblemon:is_tundra
- blooming_biosphere:marsh

</details>

<details>
<summary><b>Tag:</b> #cobblemon:apricorns_dense</summary>

- #cobblemon:is_badlands
- #cobblemon:is_desert
- #cobblemon:is_forest
- #cobblemon:is_jungle
- #cobblemon:is_snowy_forest
- #cobblemon:is_snowy_taiga
- #cobblemon:is_taiga

</details>

<details>
<summary><b>Tag:</b> #cobblemon:apricorns_normal</summary>

- #cobblemon:is_grassland
- #cobblemon:is_hills
- #cobblemon:is_shrubland
- minecraft:sparse_jungle

</details>

<details>
<summary><b>Tag:</b> #cobblemon:apricorns_sparse</summary>

- #cobblemon:is_tundra

</details>

<details>
<summary><b>Tag:</b> #cobblemon:revival_herbs</summary>

- #cobblemon:is_lush

</details>

<details>
<summary><b>Tag:</b> #cobblemon:saccharine_tree</summary>

- #cobblemon:has_block/birch_log
- #cobblemon:is_floral
- #cobblemon:is_magical
- #cobblemon:is_taiga

</details>

<details>
<summary><b>Tag:</b> #cobblemon:ore_dawn_stone_normal</summary>

- #cobblemon:is_peak
- #cobblemon:is_sky

</details>

<details>
<summary><b>Tag:</b> #cobblemon:ore_dawn_stone_rare</summary>

- #cobblemon:is_floral
- #cobblemon:is_glacial
- #cobblemon:is_hills

</details>

<details>
<summary><b>Tag:</b> #cobblemon:ore_dusk_stone_normal</summary>

- #cobblemon:is_snowy_taiga
- #cobblemon:is_spooky
- #cobblemon:is_taiga

</details>

<details>
<summary><b>Tag:</b> #cobblemon:ore_dusk_stone_rare</summary>

- #cobblemon:is_swamp

</details>

<details>
<summary><b>Tag:</b> #cobblemon:ore_fire_stone_nether</summary>

- #minecraft:is_nether

</details>

<details>
<summary><b>Tag:</b> #cobblemon:ore_fire_stone_normal</summary>

- #cobblemon:is_desert
- #cobblemon:is_thermal
- #cobblemon:is_volcanic

</details>

<details>
<summary><b>Tag:</b> #cobblemon:ore_fire_stone_rare</summary>

- #cobblemon:is_sandy

</details>

<details>
<summary><b>Tag:</b> #cobblemon:ore_ice_stone_normal</summary>

- #cobblemon:is_glacial
- #cobblemon:is_snowy_forest
- #cobblemon:is_snowy_taiga
- #cobblemon:is_tundra

</details>

<details>
<summary><b>Tag:</b> #cobblemon:ore_ice_stone_rare</summary>

- #cobblemon:is_freezing

</details>

<details>
<summary><b>Tag:</b> #cobblemon:ore_leaf_stone_normal</summary>

- #cobblemon:is_forest
- #cobblemon:is_jungle
- #cobblemon:is_lush

</details>

<details>
<summary><b>Tag:</b> #cobblemon:ore_leaf_stone_rare</summary>

- #cobblemon:is_swamp
- #cobblemon:is_tropical_island

</details>

<details>
<summary><b>Tag:</b> #cobblemon:ore_moon_stone_dripstone</summary>

- #cobblemon:is_dripstone

</details>

<details>
<summary><b>Tag:</b> #cobblemon:ore_moon_stone_normal</summary>

- #cobblemon:is_dripstone
- #cobblemon:is_snowy_taiga
- #cobblemon:is_taiga
- minecraft:mushroom_fields

</details>

<details>
<summary><b>Tag:</b> #cobblemon:ore_moon_stone_rare</summary>

- #cobblemon:is_magical
- #cobblemon:is_spooky

</details>

<details>
<summary><b>Tag:</b> #cobblemon:ore_shiny_stone_normal</summary>

- #cobblemon:is_floral
- #cobblemon:is_magical
- #cobblemon:is_sky

</details>

<details>
<summary><b>Tag:</b> #cobblemon:ore_shiny_stone_rare</summary>

- #cobblemon:is_island
- #cobblemon:is_peak

</details>

<details>
<summary><b>Tag:</b> #cobblemon:ore_sun_stone_normal</summary>

- #cobblemon:is_badlands
- #cobblemon:is_dripstone
- #cobblemon:is_grassland

</details>

<details>
<summary><b>Tag:</b> #cobblemon:ore_sun_stone_rare</summary>

- #cobblemon:is_desert
- #cobblemon:is_tropical_island

</details>

<details>
<summary><b>Tag:</b> #cobblemon:ore_thunder_stone_normal</summary>

- #cobblemon:is_highlands
- #cobblemon:is_hills

</details>

<details>
<summary><b>Tag:</b> #cobblemon:ore_thunder_stone_rare</summary>

- #cobblemon:is_jungle
- #cobblemon:is_plains

</details>

<details>
<summary><b>Tag:</b> #cobblemon:ore_water_stone_normal</summary>

- #cobblemon:is_freshwater
- #cobblemon:is_ocean

</details>

<details>
<summary><b>Tag:</b> #cobblemon:ore_water_stone_rare</summary>

- #cobblemon:is_jungle
- #cobblemon:is_thermal
- #cobblemon:is_tropical_island

</details>

<details>
<summary><b>Tag:</b> #cobblemon:autumn</summary>

- #cobblemon:is_arid
- #cobblemon:is_cold_ocean
- #cobblemon:is_mountain
- #cobblemon:is_mushroom
- #cobblemon:is_taiga
- biomesoplenty:aspen_forest
- biomesoplenty:bog
- biomesoplenty:dead_forest
- biomesoplenty:dryland
- biomesoplenty:fungal_jungle
- biomesoplenty:maple_woods
- biomesoplenty:pasture
- biomesoplenty:prairie
- biomesoplenty:pumpkin_patch
- biomesoplenty:seasonal_forest
- biomesoplenty:seasonal_orchard
- blooming_biosphere:autumnal_forest
- byg:autumnal_forest
- byg:autumnal_taiga
- terralith:skylands_autumn
- terralith:temperate_highlands
- wythers:autumnal_birch_forest
- wythers:autumnal_crags
- wythers:autumnal_flower_forest
- wythers:autumnal_forest
- wythers:autumnal_forest_edge
- wythers:autumnal_plains
- wythers:autumnal_swamp
- wythers:forbidden_forest
- wythers:harvest_fields

</details>

<details>
<summary><b>Tag:</b> #cobblemon:spring</summary>

- #aether:is_aether
- #cobblemon:is_floral
- #cobblemon:is_lukewarm_ocean
- #cobblemon:is_magical
- #cobblemon:is_plains
- terralith:skylands_spring
- the_bumblezone:floral_meadow
- wythers:spring_flower_fields
- wythers:spring_flower_forest

</details>

<details>
<summary><b>Tag:</b> #cobblemon:summer</summary>

- #cobblemon:is_forest
- #cobblemon:is_jungle
- #cobblemon:is_lush
- #cobblemon:is_swamp
- #cobblemon:is_warm_ocean
- terralith:skylands_summer

</details>

<details>
<summary><b>Tag:</b> #cobblemon:winter</summary>

- #cobblemon:is_freezing
- terralith:skylands_winter
- wythers:deep_snowy_taiga

</details>

<details>
<summary><b>Tag:</b> #cobblemon:village_plains_pokecenter</summary>


</details>

<details>
<summary><b>Tag:</b> #cobblemon:village_plains_pokecenter_signtest</summary>


</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_basalt</summary>

- betternether:flooded_deltas
- cinderscapes:blackstone_shales
- incendium:ash_barrens
- incendium:volcanic_deltas
- incendium:withered_forest
- minecraft:basalt_deltas

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_crimson</summary>

- betternether:crimson_glowing_woods
- betternether:crimson_pinewood
- betternether:nether_swampland
- betternether:nether_swampland_terraces
- byg:crimson_gardens
- gardens_of_the_dead:whistling_woods
- minecraft:crimson_forest

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_desert</summary>

- betternether:gravel_desert
- betternether:soul_plain
- byg:quartz_desert
- byg:warped_desert
- incendium:infernal_dunes
- incendium:weeping_valley
- minecraft:soul_sand_valley

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_forest</summary>

- betternether:nether_jungle
- betternether:nether_swampland
- betternether:nether_swampland_terraces
- betternether:old_swampland
- betternether:upside_down_forest
- byg:weeping_mire
- byg:withering_woods

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_frozen</summary>

- byg:subzero_hypogeal

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_fungus</summary>

- betternether:crimson_glowing_woods
- betternether:crimson_pinewood
- betternether:nether_mushroom_forest
- betternether:nether_mushroom_forest_edge
- betternether:old_fungiwoods
- betternether:old_warped_woods
- byg:crimson_gardens
- byg:embur_bog
- byg:glowstone_garden
- byg:wailing_garth
- cinderscapes:luminous_grove
- gardens_of_the_dead:soulblight_forest
- gardens_of_the_dead:whistling_woods
- incendium:inverted_forest
- minecraft:crimson_forest
- minecraft:warped_forest

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_mountain</summary>

- incendium:volcanic_deltas
- minecraft:basalt_deltas

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_overgrowth</summary>

- betternether:bone_reef
- betternether:nether_grasslands
- betternether:soul_plain
- betternether:sulfuric_bone_reef
- betternether:upside_down_forest
- betternether:upside_down_forest_cleared
- biomesoplenty:overgrowth
- byg:sythian_torrids

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_quartz</summary>

- byg:quartz_desert
- cinderscapes:quartz_cavern
- incendium:quartz_flats

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_soul_fire</summary>

- byg:subzero_hypogeal
- byg:warped_desert
- incendium:quartz_flats
- incendium:weeping_valley
- minecraft:soul_sand_valley

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_soul_sand</summary>

- betternether:nether_grasslands
- betternether:nether_swampland
- betternether:nether_swampland_terraces
- betternether:old_swampland
- betternether:poor_nether_grasslands
- betternether:soul_plain
- betternether:wart_forest
- betternether:wart_forest_edge
- byg:wailing_garth
- byg:warped_desert
- cinderscapes:ashy_shoals
- cinderscapes:blackstone_shales
- gardens_of_the_dead:soulblight_forest
- incendium:weeping_valley
- minecraft:soul_sand_valley

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_toxic</summary>

- biomesoplenty:erupting_inferno
- byg:brimstone_caverns
- byg:wailing_garth
- incendium:toxic_heap

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_warped</summary>

- betternether:nether_jungle
- betternether:old_warped_woods
- byg:wailing_garth
- byg:warped_desert
- minecraft:warped_forest

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_wasteland</summary>

- betternether:magma_land
- betternether:nether_grasslands
- betternether:poor_nether_grasslands
- biomesoplenty:crystalline_chasm
- biomesoplenty:erupting_inferno
- byg:brimstone_caverns
- byg:magma_wastes
- cinderscapes:ashy_shoals
- cinderscapes:quartz_cavern
- incendium:ash_barrens
- incendium:toxic_heap
- minecraft:nether_wastes

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_fiery</summary>

- #stellaris:mercury_biomes
- space:mercury_hotspot
- space:mercury_plains
- space:venus_highlands
- space:venus_lava_caves
- space:venus_lowlands
- space:venus_midlands
- space:venus_volcanic_plains
- stellaris:infernal_venus_barrens

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_icy</summary>

- #space:ice_craters
- stellaris:mars_ice_spikes

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_mars</summary>

- #stellaris:mars_biomes
- #stellaris:mars_biomes
- #stellaris:mars_biomes
- space:mars_dripstone
- space:mars_highlands
- space:mars_ice
- space:mars_lowlands
- space:mars_lush_caves
- space:mars_midlands

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_mercury</summary>

- #stellaris:mercury_biomes
- space:mercury_hotspot
- space:mercury_ice
- space:mercury_plains

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_moon</summary>

- #stellaris:moon_biomes
- space:moon_highlands
- space:moon_ice
- space:moon_lowlands
- space:moon_midlands
- space:moon_rocks
- swe:moon

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_space</summary>

- #stellaris:mars_biomes
- #stellaris:mercury_biomes
- #stellaris:moon_biomes
- #stellaris:venus_biomes
- space:mars_dripstone
- space:mars_highlands
- space:mars_ice
- space:mars_lowlands
- space:mars_lush_caves
- space:mars_midlands
- space:mercury_hotspot
- space:mercury_ice
- space:mercury_plains
- space:moon_highlands
- space:moon_ice
- space:moon_lowlands
- space:moon_midlands
- space:moon_rocks
- space:space
- space:venus_highlands
- space:venus_lava_caves
- space:venus_lowlands
- space:venus_midlands
- space:venus_plankton_bloom
- space:venus_sky
- space:venus_volcanic_plains
- swe:moon

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_venus</summary>

- #stellaris:venus_biomes
- space:venus_highlands
- space:venus_lava_caves
- space:venus_lowlands
- space:venus_midlands
- space:venus_plankton_bloom
- space:venus_sky
- space:venus_volcanic_plains

</details>
